bonus/confs/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: gitlab
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
