bonus/confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: apps
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: apps
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: apps
spec:
  selector:
    app: gitlab
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
